WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
284880
[WebGPU] Retain references used during executeBundles until command buffer completes
https://bugs.webkit.org/show_bug.cgi?id=284880
Summary
[WebGPU] Retain references used during executeBundles until command buffer co...
Mike Wyrzykowski
Reported
2024-12-18 07:31:51 PST
[WebGPU] Retain references used during executeBundles until command buffer completes
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-18 07:32:07 PST
<
rdar://problem/141683758
>
Mike Wyrzykowski
Comment 2
2025-01-06 16:31:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38612
EWS
Comment 3
2025-01-07 12:14:25 PST
Committed
288556@main
(5cc1b3d0aeaf): <
https://commits.webkit.org/288556@main
> Reviewed commits have been landed. Closing PR #38612 and removing active labels.
Mike Wyrzykowski
Comment 4
2025-01-09 10:15:49 PST
Reopened Bugzilla. Retaining ICBs on Intel results in crashes on EWS, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=285695
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug