[WebGPU] Retain references used during executeBundles until command buffer completes https://bugs.webkit.org/show_bug.cgi?id=284880 rdar://141683758

Reviewed by Tadeu Zagallo.

Metal should retain these resources until the MTLCommandBuffer completes,
but we have seen some false positives when shader validation is enabled
and the resource ref count would otherwise reach zero prior to the command
buffer completing.

It costs very little to manually retain, we could probably even call
-[MTLCommandBufferDescriptor setRetainedReferences:NO] at this point which
would eliminate the overhead from protecting against the false positives.

* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::CommandEncoder):
(WebGPU::CommandEncoder::addICB):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):

Canonical link: https://commits.webkit.org/288556@main